No encryption plist

--- a/wallabag/Info.plist
+++ b/wallabag/Info.plist
@@ -46,5 +46,6 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>ITSAppUsesNonExemptEncryption</key><false/>
 </dict>
 </plist>
