--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,9 @@ language: objective-c
 osx_image: xcode8.1
 xcode_project: wallabag.xcodeproj
 xcode_scheme: wallabag
-#env:
-#  global:
-#  - PROJECT=wallabag.xcodeproj
+env:
+  global:
+  - PROJECT=wallabag.xcodeproj
 
-#script:
-#  - set -o pipefail
-#  - xcodebuild -version
-#  - xcodebuild -showsdks
-  
-#  - xcodebuild -project "$PROJECT" -scheme 'wallabagTests' -destination 'name=iPhone 6,OS=10.0' ONLY_ACTIVE_ARCH=NO CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO build | xcpretty
-#  - xcodebuild -project "$PROJECT" -scheme 'wallabagTests' -sdk iphonesimulator -destination 'name=iPhone 6,OS=10.0' ONLY_ACTIVE_ARCH=NO CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO test | xcpretty
+script:
+  - set -o pipefail && env "NSUnbufferedIO=YES" xcodebuild "-workspace" "wallabag.xcworkspace" "-scheme" "wallabag" "build" "test" "-destination" "platform=iOS Simulator,name=iPhone 6s Plus,OS=latest" | xcpretty  
