--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,5 @@ osx_image: xcode8
 xcode_workspace: wallabag.xcworkspace
 xcode_scheme: wallabag
 script:
+  - pod repo update
   - set -o pipefail && env "NSUnbufferedIO=YES" xcodebuild "-workspace" "wallabag.xcworkspace" "-scheme" "wallabag" "build" "test" "-destination" "platform=iOS Simulator,name=iPhone 6s Plus,OS=latest" | xcpretty
