Try allow localhost for ATS

--- a/bagit/Info.plist
+++ b/bagit/Info.plist
@@ -24,6 +24,8 @@
 	<string></string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
+		<key>NSAllowsLocalNetworking</key>
+		<true/>
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
