Create new lane for screenshot Create new scheme for screenshot Update screenshot and release note

--- a/.gitignore
+++ b/.gitignore
@@ -63,7 +63,7 @@ fastlane/report.xml
 fastlane/Deliverfile
 fastlane/Appfile
 #fastlane/Preview.html
-Preview.html
+#Preview.html
 #fastlane/screenshots
 fastlane/test_output
 
