--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,17 @@
 language: objective-c
-osx_image: xcode8
-xcode_workspace: wallabag.xcworkspace
-xcode_scheme: wallabag
+cache: cocoapods
+matrix:
+  include:
+  - osx_image: xcode8.2
+    env: SDK="iphonesimulator10.2" DESTINATION="name=iPhone 6s,OS=10.2"
+  - osx_image: xcode8.3
+    env: SDK="iphonesimulator10.3" DESTINATION="name=iPhone 6s,OS=10.3"
+env:
+  global:
+  - WORKSPACE=wallabag.xcworkspace
+  - SCHEME=wallabag
 before_install:
   - pod repo update > /dev/null
 script:
-  - set -o pipefail && env "NSUnbufferedIO=YES" xcodebuild "-workspace" "wallabag.xcworkspace" "-scheme" "wallabag" "build" "test" "-destination" "platform=iOS Simulator,name=iPhone 6s Plus,OS=latest" | xcpretty
+  - set -o pipefail
+  - xcodebuild test -workspace "$WORKSPACE" -scheme "$SCHEME" -sdk "$SDK" -destination "$DESTINATION" ONLY_ACTIVE_ARCH=YES | xcpretty
