--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ matrix:
   include:
   - osx_image: xcode8.3
     env: SDK="iphonesimulator10.3" DESTINATION="name=iPhone 6s,OS=9.0"
-  - osx_image: xcode8.3
-    env: SDK="iphonesimulator10.3" DESTINATION="name=iPhone 6s,OS=10.3.1"
+#  - osx_image: xcode8.3
+#    env: SDK="iphonesimulator10.3" DESTINATION="name=iPhone 6s,OS=10.3.1"
 env:
   global:
   - WORKSPACE=wallabag.xcworkspace
