--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -17,6 +17,6 @@ identifier_name:
     - id
     - to
     - at
-force_cast: warning # implicitly
+#force_cast: warning # implicitly
 force_try:
   severity: warning # explicitly
