Add 2.3.4 server version

--- a/project.yml
+++ b/project.yml
@@ -68,6 +68,10 @@ targets:
     platform: iOS
     sources: [wallabagKit]
 schemes:
+  wallabag:
+    build:
+      targets:
+        wallabag: all
   WallabagTest:
     build:
       targets:
