--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 osx_image: xcode10.1
 language: objective-c
 cache: cocoapods
-script:
+before_install: 
   - pod install --repo-update
+script:
   - fastlane ios testlib
