--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 osx_image: xcode9.4
 language: objective-c
 cache: cocoapods
-before_install: 
+before_install:
+  - gem install cocoapods --pre
   - pod install --repo-update
 script:
   - fastlane ios testlib
