--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,30 +5,19 @@
 version: 2
 jobs:
   build:
-
-    # Specify the Xcode version to use
     macos:
-      xcode: "8.3.3"
-
+      xcode: "10.2.0"
     steps:
       - checkout
-
-      # Install CocoaPods
+      - run:
+          name: update CocoaPods
+          command: gem install cocoapods --pre
       - run:
           name: Install CocoaPods
           command: pod install
-
-      # Build the app and run tests
       - run:
           name: Build and run tests
-          command: fastlane scan
-          environment:
-            SCAN_DEVICE: iPhone 6
-            SCAN_SCHEME: WebTests
-
-      # Collect XML test results data to show in the UI,
-      # and save the same XML files under test-results folder
-      # in the Artifacts tab
+          command: fastlane ios testlib        
       - store_test_results:
           path: test_output/report.xml
       - store_artifacts:
