--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,12 +63,33 @@ jobs:
           path: output/scan
       - store_artifacts:
           path: output
+  testui:
+    environment:
+      BUNDLE_PATH: vendor/bundle
+      FL_OUTPUT_DIR: output
+    working_directory: /Users/distiller/project
+    macos:
+      xcode: "10.2.0"
+    steps:
+      - attach_workspace:
+          at: .
+      - run:
+          name: Build and run tests
+          command: bundle exec fastlane ios testui       
+      - store_test_results:
+          path: output/scan
+      - store_artifacts:
+          path: output
+
 workflows:
   version: 2
   build-and-test:
     jobs:
       - build
       - testlib:
+          requires:
+            - build
+      - testui:
           requires:
             - build
 
