--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ osx_image: xcode10.1
 language: objective-c
 cache: cocoapods
 before_install:
-  - gem install cocoapods --pre
-  - pod install --repo-update
+  - bundle check || bundle install
+  - bundle exec pod install
 script:
-  - fastlane ios testlib
+  - bundle exec fastlane ios testlib
