change pod install

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,19 +29,11 @@ jobs:
           key: v1-gems-{{ checksum "Gemfile.lock" }}
           paths:
             - vendor/bundle
-      - restore_cache:
-          name: Restore cocoapods cache
-          keys:
-          - v1-pod-{{ checksum "Podfile.lock" }}
-          - v1-pod-
       - run:
           name: Install cocoapods
-          command: bundle exec pod install
-      - save_cache:
-          name: Save cocoapods cache
-          key: v1-pod-{{ checksum "Podfile.lock" }}
-          paths:
-            - ~/.cocoapods
+          command: |
+            curl https://cocoapods-specs.circleci.com/fetch-cocoapods-repo-from-s3.sh | bash -s cf
+            bundle exec pod install
       - persist_to_workspace:
           root: .
           paths:
