FIx issues with badge

--- a/wallabag/Settings.bundle/Root.plist
+++ b/wallabag/Settings.bundle/Root.plist
@@ -12,7 +12,7 @@
 			<key>Title</key>
 			<string>Badge</string>
 			<key>Key</key>
-			<string>Badge</string>
+			<string>badge</string>
 			<key>DefaultValue</key>
 			<true/>
 		</dict>
