--- a/wallabag.xcodeproj/xcshareddata/xcschemes/bagit.xcscheme
+++ b/wallabag.xcodeproj/xcshareddata/xcschemes/bagit.xcscheme
@@ -43,6 +43,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "9C4C1F84240E7E340029FBC9"
+               BuildableName = "wallabagScreenshotTests.xctest"
+               BlueprintName = "wallabagScreenshotTests"
+               ReferencedContainer = "container:wallabag.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
