Try use custom action

--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -13,6 +13,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
+    - name: Run lint
+      uses: ./
+      id: hello
+      with:
+        who-to-greet: Mona the Octocat'
+        
     - name: Run tests
       run: xcodebuild clean test -scheme wallabag -destination "${destination}" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO | xcpretty
       env: 
