--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -15,11 +15,11 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Run lint
-      uses: ./
+      uses: ./.github/actions/hello
       id: hello
       with:
         who-to-greet: Mona the Octocat'
-        
+
     - name: Run tests
       run: xcodebuild clean test -scheme wallabag -destination "${destination}" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO | xcpretty
       env: 
