Fix #288 handle pdf in  share extension

--- a/bagit/Info.plist
+++ b/bagit/Info.plist
@@ -42,6 +42,8 @@
                 ).@count == 1
             ).@count > 0
             </string>
+            <key>NSExtensionJavaScriptPreprocessingFile</key>
+            <string>ExtensionClass</string>
 		</dict>
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.share-services</string>
