Update Setting language

--- a/bagit/Info.plist
+++ b/bagit/Info.plist
@@ -40,10 +40,10 @@
                     ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO "public.image" ||
                     ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO "public.url"
                 ).@count == 1
-            ).@count > 0
+            ).@count &gt; 0
             </string>
-            <key>NSExtensionJavaScriptPreprocessingFile</key>
-            <string>ExtensionClass</string>
+			<key>NSExtensionJavaScriptPreprocessingFile</key>
+			<string>ExtensionClass</string>
 		</dict>
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.share-services</string>
