--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -18,8 +18,7 @@ jobs:
         brew install swiftformat
         swiftformat --lint .
 
-
     - name: Run tests
-      run: xcodebuild clean test -scheme wallabag -destination "${destination}" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO
+      run: xcodebuild clean test -scheme wallabag -destination "${destination}" -testPlan wallabag CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO
       env: 
          destination: ${{ matrix.destination }}
