--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -2,6 +2,9 @@ name: Swift
 
 on: [push, pull_request]
   
+env:
+  DEVELOPER_DIR: /Applications/Xcode_12.app/Contents/Developer
+
 jobs:
   build:
 
