Add storekit debug

--- a/wallabag.xcodeproj/xcshareddata/xcschemes/wallabag.xcscheme
+++ b/wallabag.xcodeproj/xcshareddata/xcschemes/wallabag.xcscheme
@@ -135,6 +135,9 @@
             ReferencedContainer = "container:wallabag.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <StoreKitConfigurationFileReference
+         identifier = "../../wallabag/StoreKitConfiguration.storekit">
+      </StoreKitConfigurationFileReference>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
