--- a/wallabag/Info.plist
+++ b/wallabag/Info.plist
@@ -31,6 +31,10 @@
 	<array>
 		<string>AddEntryIntent</string>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
