--- a/wallabag.xcodeproj/xcshareddata/xcschemes/wallabag.xcscheme
+++ b/wallabag.xcodeproj/xcshareddata/xcschemes/wallabag.xcscheme
@@ -117,7 +117,7 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      language = "de"
+      language = "fr"
       region = "FR"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
