--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -3,7 +3,7 @@ name: Swift
 on: [push, pull_request]
   
 env:
-  DEVELOPER_DIR: /Applications/Xcode_12.app/Contents/Developer
+  DEVELOPER_DIR: /Applications/Xcode_12.3.app/Contents/Developer
 
 jobs:
   build:
@@ -11,7 +11,7 @@ jobs:
     runs-on: macos-latest
     strategy:
         matrix:
-          destination: ['platform=iOS Simulator,OS=14.0,name=iPhone 11']    
+          destination: ['platform=iOS Simulator,name=iPhone 11']    
 
     steps:
     - uses: actions/checkout@v2
